--- a/templates/administration/dashboard.html
+++ b/templates/administration/dashboard.html
@@ -94,33 +94,39 @@
                     </table>
                     
                 </div>
+                <div id="dialog" title="Todos Tasks" class="bg-blue-100">
+                    <form action="" method="post">
+                        {%csrf_token%}
+                        <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{form.name.label_tag}}</p>
+                        {{form.name}}
+                        <button class="bg-blue-500 text-white py-1 px-2 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1 mt-3" type="submit"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Create task</span></button>
+                    </form>
+                </div>
                 <div class="todo">
                     <div class="head">
                         <h3>Todos</h3>
-                        <i class='bx bx-plus'></i>
+                        <i class='bx bx-plus' title="add todo task"></i>
                         <i class='bx bx-filter'></i>
                     </div>
                     <ul class="todo-list">
-                        <li class="completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="not-completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="not-completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
+                        {% if tasks %}
+                            {% for task in tasks %}
+                                <li class="completed">
+                                    <p>{{ task.name }}</p>
+                                    <a href="{% url 'delete_todo' task_id=task.id %}" title="delete todo task">
+                                        <i class="fa-solid fa-trash-can" style="color: #e01a1a;"></i>
+                                    </a>
+                                </li>
+                            {% empty %}
+                                <li class="completed">
+                                    <p>No tasks. Click the plus(<i class='bx bx-plus'></i>) icon to add a task.</p>
+                                </li>
+                            {% endfor %}
+                        {% else %}
+                            <li class="completed">
+                                <p>No tasks. Click (<i class='bx bx-plus'></i>) the plus icon to add a task.</p>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
