--- a/templates/dashboards/all_teacher_pages/teachers.html
+++ b/templates/dashboards/all_teacher_pages/teachers.html
@@ -125,13 +125,13 @@
                     </span>
                 </li>
             </ul>
+            <div class="table-data">
+                <div class="order">
                     {% if messages %}
                     {% for message in messages %}
                     <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
                     {% endfor %}
                     {% endif %}
-            <div class="table-data">
-                <div class="order">
                     <h2 id="welcome">WELCOME {{ user.first_name|upper }}</h2>
                     <div id="welcome">
                         <div>
@@ -139,35 +139,41 @@
                         </div>
                     </div>
             </div>
-                <div class="todo">
-                    <div class="head">
-                        <h3>Todos</h3>
-                        <i class='bx bx-plus'></i>
-                        <i class='bx bx-filter'></i>
-                    </div>
-                    <ul class="todo-list">
-                        <li class="completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="not-completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                        <li class="not-completed">
-                            <p>Todo List</p>
-                            <i class='bx bx-dots-vertical-rounded'></i>
-                        </li>
-                    </ul>
+            <div id="dialog" title="Todos Tasks">
+                <form action="" method="post">
+                    {%csrf_token%}
+                    <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{forms.name.label_tag}}</p>
+                    {{forms.name}}
+                    <button class="bg-blue-500 text-white py-1 px-2 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1 mt-3" type="submit"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Create task</span></button>
+                </form>
+            </div>
+            <div class="todo">
+                <div class="head">
+                    <h3>Todos</h3>
+                    <i class='bx bx-plus' title="add todo task"></i>
+                    <i class='bx bx-filter'></i>
                 </div>
+                <ul class="todo-list">
+                    {% if task %}
+                        {% for tasks in task %}
+                            <li class="completed">
+                                <p>{{ tasks.name }}</p>
+                                <a href="{% url 'delete_teacher_todo' task_id=tasks.id %}" title="delete todo task">
+                                    <i class="fa-solid fa-trash-can" style="color: #e01a1a;"></i>
+                                </a>
+                            </li>
+                        {% empty %}
+                            <li class="completed">
+                                <p>No tasks available. Click the plus(<i class='bx bx-plus'></i>) icon to add a task.</p>
+                            </li>
+                        {% endfor %}
+                    {% else %}
+                        <li class="completed">
+                            <p>No tasks. Click (<i class='bx bx-plus'></i>) the plus icon to add a task.</p>
+                        </li>
+                    {% endif %}
+                </ul>                
+            </div>
             </div>
         </main>
         <!-- END OF MAIN -->
