--- a/templates/dashboards/all_admin_pages/base.html
+++ b/templates/dashboards/all_admin_pages/base.html
@@ -85,8 +85,7 @@
 <section id="content">
         <!-- NAVBAR -->
          <nav>
-            <i class='bx bx-menu'></i>
-            <a href="#" class="nav-link">Categories</a>
+            <i class='bx bx-menu' style="font-size: 32px; color: rgb(58, 58, 58);"></i>
             <form method="GET" action="{% url 'search_results_view' %}">
                 <div class="form-input">
                     <input type="search" name="query" placeholder="Search students or teachers">
