--- a/templates/dashboards/all_student_pages/base.html
+++ b/templates/dashboards/all_student_pages/base.html
@@ -87,8 +87,7 @@
     <section id="content">
         <!-- NAVBAR -->
          <nav>
-            <i class='bx bx-menu'></i>
-            <a href="#" class="nav-link">Categories</a>
+            <i class='bx bx-menu' style="font-size: 32px; color: rgb(58, 58, 58);"></i>
             <form action="#">
                 <div class="form-input">
                     <input type="search" placeholder="Search...">
