--- a/templates/administration/dashboard.html
+++ b/templates/administration/dashboard.html
@@ -99,7 +99,7 @@
                         {%csrf_token%}
                         <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{form.name.label_tag}}</p>
                         {{form.name}}
-                        <button class="bg-blue-500 text-white py-1 px-2 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1 mt-3" type="submit"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Create task</span></button>
+                        <button class="bg-blue-500 text-white py-1 px-2 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1 mt-3 hover:bg-blue-300 hover:text-white" type="submit"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Create task</span></button>
                     </form>
                 </div>
                 <div class="todo">
