--- a/templates/dashboards/all_admin_pages/create_class.html
+++ b/templates/dashboards/all_admin_pages/create_class.html
@@ -19,7 +19,7 @@
             {{form.subjects}}
         </div>
 
-        <button class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-primary/80 transition-colors"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Class</span></button>    
+        <button class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-300"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Class</span></button>    
     </form>
     </div>
 </div>
