--- a/templates/dashboards/all_admin_pages/edit_teacher.html
+++ b/templates/dashboards/all_admin_pages/edit_teacher.html
@@ -39,7 +39,7 @@
         {{form.emergency_contact}}
       </div>
   
-      <button class="bg-blue-500 text-white py-2 px-4 rounded-md mb-3"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Teacher</span></button>
+      <button class="bg-blue-500 text-white py-2 px-4 rounded-md mb-3 hover:bg-blue-300"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Teacher</span></button>
     </form>
   </div>
 
