--- a/templates/dashboards/all_admin_pages/edit_timetable.html
+++ b/templates/dashboards/all_admin_pages/edit_timetable.html
@@ -130,8 +130,8 @@
             </div>
         </div>
         <div class="mt-4">
-            <button type="submit" class="bg-blue-500 text-white m-1  p-2 rounded-md md:text-normal text-sm"><i class="fa-regular fa-pen-to-square"></i><span class="pl-1">Update Timetable</span></button>
-            <a href="{% url 'class_details' user_id=table.class_info.id %}" class="bg-blue-500 text-white m-1 p-2 rounded-md mb-3 md:text-normal text-sm"><i class="fa-solid fa-arrow-left"></i><span class="pl-1">Go Back</span></a>        
+            <button type="submit" class="bg-blue-500 text-white m-1  p-2 rounded-md md:text-normal text-sm hover:bg-blue-300"><i class="fa-regular fa-pen-to-square"></i><span class="pl-1">Update Timetable</span></button>
+            <a href="{% url 'class_details' user_id=table.class_info.id %}" class="bg-blue-500 text-white m-1 p-2 rounded-md mb-3 md:text-normal text-sm hover:bg-blue-300"><i class="fa-solid fa-arrow-left"></i><span class="pl-1">Go Back</span></a>        
         </div>
         </form>
     </div>
