--- a/templates/dashboards/all_admin_pages/Annoucement.html
+++ b/templates/dashboards/all_admin_pages/Annoucement.html
@@ -4,7 +4,7 @@
 
 <div class="m-3 text-black rounded-lg">
     {%if request.user.is_superuser%}
-    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_all_annoucement'%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Annoucement</span></a></p>
+    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_all_annoucement'%}" class="bg-blue-500 p-3 rounded-lg hover:bg-blue-300"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Annoucement</span></a></p>
      {%else%}
     {%endif%}
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL Annoucement</p>
@@ -26,8 +26,8 @@
                 </article>
                 {%if request.user.is_superuser%}
                 <div class="text-white">
-                <p class="p-3 font-normal"><a href="{%url 'edit_annoucement' post_id=post.id%}" class="bg-blue-500 p-2 rounded-lg" style="color: white;"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Annoucement</span></a></p>
-                <p class="p-3 font-normal"><a href="{%url 'delete_annoucement' post_id=post.id%}" class="bg-red-500 p-2 rounded-lg" style="color: white;"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete Annoucement</span></a></p>
+                <p class="p-3 font-normal"><a href="{%url 'edit_annoucement' post_id=post.id%}" class="bg-blue-500 p-2 rounded-lg hover:bg-blue-300" style="color: white;"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Annoucement</span></a></p>
+                <p class="p-3 font-normal"><a href="{%url 'delete_annoucement' post_id=post.id%}" class="bg-red-500 p-2 rounded-lg hover:bg-red-300" style="color: white;"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete Annoucement</span></a></p>
                 </div>
                 {%else%}
                 {%endif%}
