--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -8,7 +8,7 @@
             {%if student%}
             {%for students in student%}
             <a href="{% url 'student_detail' user_id=students.user.id %}">
-                <div class="h-[200px] w-[200px] p-2 rounded-lg flex item-center justify-center text-center font-medium" style="background-color: #F9F9F9;">
+                <div class="h-[200px] w-[200px] p-2 rounded-lg flex item-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                     <div>
                     <img src="{{students.user.profile_photo.url}}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{students.user.first_name}} {{students.user.last_name}}">
                     <p>{{students.user.first_name}} {{students.user.last_name}}</p>
@@ -26,7 +26,7 @@
             {%if teacher%}
             {%for teachers in teacher%}
             <a href="{% url 'teacher_detail' user_id=teachers.user.id %}">
-                <div class="h-[200px] w-[200px] p-2 rounded-lg flex item-center justify-center text-center font-medium" style="background-color: #F9F9F9;">
+                <div class="h-[200px] w-[200px] p-2 rounded-lg flex item-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                     <div>
                     <img src="{{teachers.user.profile_photo.url}}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{teachers.user.first_name}} {{teachers.user.last_name}}">
                     <p>{{teachers.user.first_name}} {{teachers.user.last_name}}</p>
@@ -63,7 +63,7 @@
         <tbody>
             {% for timetable in timetables %}
             <tr>
-                <td class="p-1 border-b border-r border-gray-300">{{ timetable.day_of_week }}<br><a href="{%url 'edit_timetable' table_id=timetable.id%}" class="text-blue-500">Edit</a></td>
+                <td class="p-1 border-b border-r border-gray-300">{{ timetable.day_of_week }}<br><a href="{%url 'edit_timetable' table_id=timetable.id%}" class="text-blue-500 hover:text-blue-300 font-medium">Edit</a></td>
                 <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_one.name }}<br>{{ timetable.subject_one_start_time }}-{{ timetable.subject_one_end_time }}</td>
                 <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_two.name }}<br>{{ timetable.subject_two_start_time }}-{{ timetable.subject_two_end_time }}</td>
                 <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_three.name }}<br>{{ timetable.subject_three_start_time }}-{{ timetable.subject_three_end_time }}</td>
@@ -78,7 +78,7 @@
     </table>
 </div>
     </div>
-    <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'edit_class' class_id=class.id%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Class</span></a></p>
-    <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete Class</span></a></p>
+    <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'edit_class' class_id=class.id%}" class="bg-blue-500 p-3 rounded-lg hover:bg-blue-300"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Class</span></a></p>
+    <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg hover:bg-red-300"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete Class</span></a></p>
 </div>
 {%endblock section%}
