--- a/templates/dashboards/all_admin_pages/myClass.html
+++ b/templates/dashboards/all_admin_pages/myClass.html
@@ -3,7 +3,7 @@
 {% block section %}
 
 <div class="m-3 text-black rounded-lg">
-    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_class'%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Class</span></a></p>
+    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_class'%}" class="bg-blue-500 p-3 rounded-lg hover:bg-blue-300"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Class</span></a></p>
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL Classes</p>
     {% if messages %}
     {% for message in messages %}
@@ -14,7 +14,7 @@
         {%if class%}
         {%for classes in class%}
         <a href="{%url 'class_details' user_id=classes.id%}">
-            <li class="p-5 rounded-lg font-medium text-gray-700 w-32" style="background-color: #F9F9F9;">{{classes.name}}</li>
+            <li class="p-5 rounded-lg font-medium text-gray-700 w-32 hover:bg-blue-300 hover:text-white bg-white">{{classes.name}}</li>
         </a>
         {%endfor%}
         {%endif%}
