--- a/templates/dashboards/all_admin_pages/subject_list.html
+++ b/templates/dashboards/all_admin_pages/subject_list.html
@@ -3,7 +3,7 @@
 {% block section %}
 
 <div class="m-3 text-black">
-    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_subject'%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Subject</span></a></p>
+    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_subject'%}" class="bg-blue-500 p-3 rounded-lg hover:bg-blue-300"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Subject</span></a></p>
     {% if messages %}
     {% for message in messages %}
     <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
