--- a/templates/dashboards/all_admin_pages/timetable.html
+++ b/templates/dashboards/all_admin_pages/timetable.html
@@ -13,7 +13,7 @@
         {% if classes %}
         {% for class in classes %}
         <a href="{%url 'create_class_timetable' class_id=class.id%}">
-            <li class="p-5 rounded-lg font-medium text-gray-700 w-32" style="background-color: #F9F9F9;">{{ class.name }}</li>
+            <li class="p-5 rounded-lg font-medium text-gray-700 w-32 hover:bg-blue-300 hover:text-white bg-white">{{ class.name }}</li>
         </a>
         {% endfor %}
         {% else %}
