--- a/templates/dashboards/all_teacher_pages/attendance_record.html
+++ b/templates/dashboards/all_teacher_pages/attendance_record.html
@@ -13,7 +13,7 @@
                 <span class="font-medium">Select Year</span>
                 {{ forms.year }}
             </div>
-            <button class="px-2 py-1 bg-blue-500 text-white rounded-lg" type="submit"><i class="fa-solid fa-plus"></i><span class="pl-1">Generate Attendance Table</span></button>
+            <button class="px-2 py-1 bg-blue-500 text-white rounded-lg hover:bg-blue-300 bg-white" type="submit"><i class="fa-solid fa-plus"></i><span class="pl-1">Generate Attendance Table</span></button>
         </form>
     </div>
     {%if weekdays%}
@@ -343,7 +343,7 @@
             </table>
             </div>
             
-            <button type="submit" class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Save Attendance</span></button>
+            <button type="submit" class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg hover:bg-blue-300 bg-white"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Save Attendance</span></button>
         </div>
         </form>
     </div>
