--- a/templates/dashboards/all_teacher_pages/teacher_classes.html
+++ b/templates/dashboards/all_teacher_pages/teacher_classes.html
@@ -13,7 +13,7 @@
         {%if classes%}
         {%for class in classes%}
         <a href="{%url 'teacher_class_details' class_id=class.id%}">
-            <li class="p-5 rounded-lg font-medium text-gray-700" style="background-color: #F9F9F9;">{{class.name}}</li>
+            <li class="p-5 rounded-lg font-medium text-gray-700 hover:bg-blue-300 hover:text-white hover:bg-blue-300 bg-white">{{class.name}}</li>
         </a>
         {%endfor%}
         {%endif%}
