--- a/templates/dashboards/all_teacher_pages/teachers.html
+++ b/templates/dashboards/all_teacher_pages/teachers.html
@@ -143,7 +143,7 @@
                     {%csrf_token%}
                     <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{forms.name.label_tag}}</p>
                     {{forms.name}}
-                    <button class="bg-blue-500 text-white py-1 px-2 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1 mt-3" type="submit"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Create task</span></button>
+                    <button class="bg-blue-500 hover:bg-blue-300 text-white py-1 px-2 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1 mt-3" type="submit"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Create task</span></button>
                 </form>
             </div>
             <div class="todo">
