--- a/templates/dashboards/all_student_pages/students.html
+++ b/templates/dashboards/all_student_pages/students.html
@@ -86,10 +86,10 @@
         <!-- NAVBAR -->
          <nav>
             <i class='bx bx-menu' style="font-size: 32px; color: rgb(58, 58, 58);"></i>
-            <form action="#">
+            <form method="GET" action="{% url 'student_search_results_view' %}">
                 <div class="form-input">
-                    <input type="search" placeholder="Search...">
-                    <button type="submit" class="search-btn"><i class='bx bx-search' ></i></button>
+                    <input type="search" name="query" placeholder="Search students or teachers">
+                    <button type="submit" class="search-btn"><i class='bx bx-search'></i></button>
                 </div>
             </form>
             <a href="#" class="notification">
