--- a/templates/dashboards/all_student_pages/base.html
+++ b/templates/dashboards/all_student_pages/base.html
@@ -88,9 +88,9 @@
         <!-- NAVBAR -->
          <nav>
             <i class='bx bx-menu' style="font-size: 32px; color: rgb(58, 58, 58);"></i>
-            <form action="#">
+            <form method="GET" action="{% url 'student_search_results_view' %}">
                 <div class="form-input">
-                    <input type="search" placeholder="Search...">
+                    <input type="search" name="query" placeholder="Search students or teachers">
                     <button type="submit" class="search-btn"><i class='bx bx-search'></i></button>
                 </div>
             </form>
