--- a/templates/dashboards/all_student_pages/search_result.html
+++ b/templates/dashboards/all_student_pages/search_result.html
@@ -14,7 +14,7 @@
                 <h3 class="text-lg font-medium text-gray-700">Teachers:</h3>
                 <div class="flex flex-wrap gap-3">
                     {% for teacher in teacher_results %}
-                    <a href="{% url 'teacher_detail' user_id=teacher.user.id %}">
+                    <a href="{% url 'student_teacher_details' teacher_id=teacher.user.id %}">
                         <div class="h-[200px] w-[200px] p-2 rounded-lg flex items-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                             <div>
                                 <img src="{{ teacher.user.profile_photo.url }}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{ teacher.user.first_name }} {{ teacher.user.last_name }}">
@@ -32,7 +32,7 @@
                 <h3 class="mt-5 text-lg font-medium text-gray-700 pb-3">Students:</h3>
                 <div class="flex flex-wrap gap-3">
                     {% for student in student_results %}
-                    <a href="{% url 'student_detail' user_id=student.user.id %}">
+                    <a href="{% url 'student_details' student_id=student.user.id %}">
                         <div class="h-[200px] w-[200px] p-2 rounded-lg flex items-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                             <div>
                                 <img src="{{ student.user.profile_photo.url }}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{ student.user.first_name }} {{ student.user.last_name }}">
