--- a/templates/dashboards/all_student_pages/student_details.html
+++ b/templates/dashboards/all_student_pages/student_details.html
@@ -23,16 +23,18 @@
                         <li>Class: {{ student.student_class }}</li>
                     </ul>
                 </div>
+                {%if request.user == student.user%}
                 <div class="bg-card p-4 rounded-lg my-4">
                     <h2 class="text-lg font-bold">Contact</h2>
                     <ul class="text-sm mt-2">
-                        <li>Phone: {{ student.phone_number }}</li>
+                        <li>Email: {{ student.user.email }}</li>
                         <li>Home Address: {{ student.home_address }}</li>
                         <li>Parent/Guardian Name: {{ student.parent_or_guardian_name }}</li>
                         <li>Parent/Guardian Phone: {{ student.parent_or_guardian_phone_number }}</li>
                         <li>Parent/Guardian Email: {{ student.parent_email }}</li>
                     </ul>
                 </div>
+                {%endif%}
             </div>
         </div>
     </section>
