--- a/templates/dashboards/all_admin_pages/base.html
+++ b/templates/dashboards/all_admin_pages/base.html
@@ -92,10 +92,36 @@
                     <button type="submit" class="search-btn"><i class='bx bx-search'></i></button>
                 </div>
             </form>
-            <a href="#" class="notification">
+            <a href="#" class="notification" id="notificationBell">
                 <i class='bx bxs-bell' ></i>
-                <span class="num">8</span>
+                <span class="num">{{total_notifications}}</span>
             </a>
+
+            <div class="notification-dropdown" id="notificationDropdown" style="display: none;">
+                <h2>Notifications</h2><br>
+                {% if all_notifications %}
+                    <ul>
+                        {% for notification in all_notifications %}
+                            <li class="border-b-2 border-white pb-1">
+                                <p>{{ notification.message }}</p>
+                                <small>{{ notification.created_at|date:"Y-m-d H:i" }}</small>
+                                <form action="{% url 'delete_admin_notification' notification.id %}" method="post" style="display:inline;">
+                                    {% csrf_token %}
+                                    <button type="submit" class="delete-notification pl-1" title="Delete">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+                                </form>
+                            </li>
+                        {% empty %}
+                            <p>No notifications</p>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>No notifications</p>
+                {% endif %}
+            </div>
+            
+
             <a href="#" class="profile">
                 <img src="{%static 'img/449181880_1484650349104562_652231313086318225_n.jpg'%}" alt="">
             </a>
