--- a/templates/dashboards/all_student_pages/base.html
+++ b/templates/dashboards/all_student_pages/base.html
@@ -94,6 +94,48 @@
                     <button type="submit" class="search-btn"><i class='bx bx-search'></i></button>
                 </div>
             </form>
+
+            <a href="#" class="notification" id="notificationBell">
+                <i class='bx bxs-bell'></i>
+                <span class="num">{{ unread_notifications_count }}</span>
+            </a>
+
+            <div class="notification-dropdown" id="notificationDropdown" style="display: none;">
+                <h2>Notifications</h2><br>
+                {% if notifications or notification_grade %}
+                    <ul>
+                        {% for notification in notifications %}
+                            <li class="border-b-2 border-white pb-1">
+                                <p>{{ notification.message }}</p>
+                                <small>{{ notification.created_at|date:"Y-m-d H:i" }}</small>
+                                <form action="{% url 'delete_notification' notification.id %}" method="post" style="display:inline;">
+                                    {% csrf_token %}
+                                    <button type="submit" class="delete-notification pl-1" title="Delete">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+                                </form>
+                            </li>
+                        {% empty %}
+                        {% endfor %}
+    
+                        {% for grade_notification in notification_grade %}
+                            <li class="border-b-2 border-white pb-1">
+                                <p>{{ grade_notification.message }}</p>
+                                <small>{{ grade_notification.date_created|date:"Y-m-d H:i" }}</small>
+                                <form action="{% url 'delete_student_notification' grade_notification.id %}" method="post" style="display:inline;">
+                                    {% csrf_token %}
+                                    <button type="submit" class="delete-notification pl-1" title="Delete">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+                                </form>
+                            </li>
+                        {% empty %}
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>No notifications</p>
+                {% endif %}
+            </div>
             
             <a href="{%url 'student_details_page' %}" class="profile">
                 <img src="{{ request.user.profile_photo.url }}" alt="Profile Photo">
